<resources>
    <string name="app_name">Poker24</string>
    <string name="MainTitle">扑克24点计算器</string>
    <string name="StartGame">开始游戏</string>
    <string name="todo">TODO</string>
    <string name="PleaseChoose">请选择四张扑克牌</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="startcalc">开始计算</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="huadong">左右滑动以查看更多</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
    <string name="todo26">TODO</string>
    <string name="todo27">TODO</string>
    <string name="todo28">TODO</string>
    <string name="todo29">TODO</string>
    <string name="hx5">TODO</string>
    <string name="hx6">TODO</string>
    <string name="hx7">TODO</string>
    <string name="hx8">TODO</string>
    <string name="hx9">TODO</string>
    <string name="hx10">TODO</string>
    <string name="hx11">TODO</string>
    <string name="hx12">TODO</string>
    <string name="hx13">TODO</string>
    <string name="mh6">TODO</string>
    <string name="mh5">TODO</string>
    <string name="mh7">TODO</string>
    <string name="mh8">TODO</string>
    <string name="mh9">TODO</string>
    <string name="mh10">TODO</string>
    <string name="mh11">TODO</string>
    <string name="mh12">TODO</string>
    <string name="mh13">TODO</string>
    <string name="fp5">TODO</string>
    <string name="fp6">TODO</string>
    <string name="fp7">TODO</string>
    <string name="fp8">TODO</string>
    <string name="fp9">TODO</string>
    <string name="fp10">TODO</string>
    <string name="fp11">TODO</string>
    <string name="fp12">TODO</string>
    <string name="fp13">TODO</string>
    <string name="result1">扑克牌对应的数</string>
    <string name="result2">0 0 0 0</string>
    <string name="result3">计算结果</string>
    <string name="result">所选扑克</string>
    <string name="r1">TODO</string>
    <string name="r2">TODO</string>
    <string name="r3">TODO</string>
    <string name="r4">TODO</string>
    <string name="back">返回</string>
</resources>